# python-complete-masterclass

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
01_Introduction_Why_Program/: README.md  program.py
02_Variables_Expressions_Statements/: README.md  program.py
03_Conditional_Execution/: README.md  program.py
04_Functions/: README.md  program.py
05_Loops_and_Iteration/: README.md  program.py
06_Strings/: README.md  program.py
07_Reading_Files/: README.md  program.py
08_Python_Lists/: README.md  program.py
09_Dictionaries/: README.md  program.py
10_Tuples/: README.md  program.py
11_Regular_Expressions/: README.md  program.py
12_Networked_Programs/: README.md  program.py
13_Web_Services_and_APIs/: README.md  program.py
14_Object_Oriented_Programming/: README.md  program.py
15_Databases_and_SQL/: README.md  program.py
16_Data_Visualization/: README.md  program.py
17_Python_Architecture_and_PEP/: program.py
18_Variable_Scope/: README.md  program.py
19_Type_Casting_and_Checking/: program.py
20_Operators_in_Python/: README.md  program.py
21_Comments_and_Documentation/: README.md  program.py
22_Input_Handling_sys_argv/: README.md  program.py
23_OOP_Constructors/: program.py
24_OOP_Polymorphism/: program.py
25_OOP_Abstraction/: program.py
26_OOP_Access_Specifiers/: README.md  program.py
27_OOP_Encapsulation/: program.py
28_Instance_Class_Static_Methods/: README.md  program.py
29_DB_Connection_Secure/: program.py
30_Higher_Order_Functions/: program.py
src/: main.py
(+143 files in other folders)
